@startuml UnoMas_DiagramaGRASP_Simplificado

title Sistema Uno Mas - Patrones GRASP

skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor<<Controller>> #E1F5FE
    BackgroundColor<<Service>> #F3E5F5
    BackgroundColor<<Repository>> #E8F5E9
    BackgroundColor<<Model>> #FFF3E0
    BorderColor #424242
    ArrowColor #424242
}

' ============= CAPA CONTROLADOR (Controller GRASP) =============
package "Capa Presentación" <<Rectangle>> {
    class UsuarioController <<Controller>> {
        - usuarioService: UsuarioService
        + registrarUsuario(dto): ResponseEntity
        + obtenerPerfil(id): ResponseEntity
    }
    
    class PartidoController <<Controller>> {
        - partidoService: PartidoService
        + crearPartido(dto): ResponseEntity
        + unirseAPartido(id, usuarioId): ResponseEntity
        + confirmarPartido(id): ResponseEntity
        + finalizarPartido(id): ResponseEntity
    }
    
    note right of UsuarioController
        <b>GRASP: Controller</b>
        Recibe y coordina las
        solicitudes del sistema
    end note
}

' ============= CAPA LÓGICA (Expert, Creator, High Cohesion) =============
package "Capa Negocio" <<Rectangle>> {
    class UsuarioService <<Service>> {
        - usuarioRepository: UsuarioRepository
        + registrarUsuario(dto): UsuarioResponseDTO
        + obtenerUsuarioPorId(id): Usuario
        + validarUsuario(usuario): boolean
    }
    
    class PartidoService <<Service>> {
        - partidoRepository: PartidoRepository
        - usuarioService: UsuarioService
        + crearPartido(dto): PartidoResponseDTO
        + unirseAPartido(partidoId, usuarioId): void
        + confirmarPartido(id): void
        + finalizarPartido(id): void
    }
    
    note right of PartidoService
        <b>GRASP: Expert</b>
        Tiene la información necesaria
        para gestionar partidos
        
        <b>GRASP: High Cohesion</b>
        Responsabilidades relacionadas
        con lógica de negocio
    end note
}

' ============= MODELO DE DOMINIO (Expert, Creator) =============
package "Modelo de Dominio" <<Rectangle>> {
    class Usuario <<Model>> {
        - id: Long
        - nombre: String
        - email: String
        - nivelHabilidad: String
        - ubicacion: String
        + validarDatos(): boolean
        + esCompatibleCon(partido): boolean
    }
    
    class Partido <<Model>> {
        - id: Long
        - nombre: String
        - fecha: LocalDateTime
        - ubicacion: String
        - cantidadJugadores: int
        - jugadores: List<Usuario>
        - organizador: Usuario
        + agregarJugador(usuario): void
        + estaCompleto(): boolean
        + puedeIniciar(): boolean
        + calcularDistancia(ubicacion): double
    }
    
    note right of Partido
        <b>GRASP: Expert</b>
        Conoce sus propios datos
        y puede validar su estado
        
        <b>GRASP: Creator</b>
        Gestiona su colección
        de jugadores
    end note
}

' ============= CAPA PERSISTENCIA (Low Coupling) =============
package "Capa Persistencia" <<Rectangle>> {
    interface UsuarioRepository <<Repository>> {
        + save(usuario): Usuario
        + findById(id): Optional<Usuario>
        + findByEmail(email): Optional<Usuario>
    }
    
    interface PartidoRepository <<Repository>> {
        + save(partido): Partido
        + findById(id): Optional<Partido>
        + findByEstado(estado): List<Partido>
    }
    
    note right of UsuarioRepository
        <b>GRASP: Low Coupling</b>
        Interfaces que reducen
        acoplamiento con BD
    end note
}

' ============= DTOs (Low Coupling) =============
package "DTOs" <<Rectangle>> {
    class UsuarioRegistroDTO {
        - nombre: String
        - email: String
        - nivelHabilidad: String
        - ubicacion: String
    }
    
    class PartidoRequestDTO {
        - nombre: String
        - fecha: String
        - ubicacion: String
        - cantidadJugadores: int
        - deporte: String
    }
    
    class PartidoResponseDTO {
        - id: Long
        - nombre: String
        - estado: String
        - jugadoresActuales: int
        - jugadoresNecesarios: int
    }
    
    note left of UsuarioRegistroDTO
        <b>GRASP: Low Coupling</b>
        DTOs desacoplan la API
        del modelo de dominio
    end note
}

' ============= RELACIONES =============

' Controllers -> Services
UsuarioController --> UsuarioService : usa
PartidoController --> PartidoService : usa

' Services -> Repositories
UsuarioService --> UsuarioRepository : accede
PartidoService --> PartidoRepository : accede
PartidoService --> UsuarioService : colabora

' Services -> Model
UsuarioService ..> Usuario : crea/gestiona
PartidoService ..> Partido : crea/gestiona

' Repositories -> Model
UsuarioRepository ..> Usuario : persiste
PartidoRepository ..> Partido : persiste

' Model relationships
Partido "1" o-- "1..*" Usuario : jugadores >
Partido "1" --> "1" Usuario : organizador >

' DTOs relationships
UsuarioController ..> UsuarioRegistroDTO : recibe
PartidoController ..> PartidoRequestDTO : recibe
PartidoController ..> PartidoResponseDTO : retorna

legend right
    <b>Patrones GRASP Implementados:</b>
    
    <b>1. Controller:</b>
    • UsuarioController, PartidoController
    • Coordinan operaciones del sistema
    
    <b>2. Expert (Experto en Información):</b>
    • Usuario: valida sus propios datos
    • Partido: gestiona su estado y jugadores
    • Services: tienen info para lógica de negocio
    
    <b>3. Creator (Creador):</b>
    • Partido crea/gestiona su lista de jugadores
    • Services crean instancias de entidades
    
    <b>4. Low Coupling (Bajo Acoplamiento):</b>
    • Interfaces Repository
    • DTOs para desacoplar API del dominio
    • Separación en capas
    
    <b>5. High Cohesion (Alta Cohesión):</b>
    • Cada clase tiene responsabilidades relacionadas
    • Services enfocados en lógica de negocio
    • Controllers solo coordinan
endlegend

@enduml
